@@ -23,8 +23,21 @@ Feature: Zooming in and out
     # https://github.com/The-Compiler/qutebrowser/issues/1118
     Scenario: Zooming in with very big count
         When I run :zoom-in with count 99999999999
-        Then the message "Zoom level: 100%" should be shown
-        And the zoom should be 100%
+        Then the message "Zoom level: 120%" should be shown
+        And the zoom should be 120%
+
+    # https://github.com/The-Compiler/qutebrowser/issues/1118
+    Scenario: Zooming out with very big count
+        When I run :zoom-out with count 99999999999
+        Then the message "Zoom level: 50%" should be shown
+        And the zoom should be 50%
+
+    # https://github.com/The-Compiler/qutebrowser/issues/1118
+    Scenario: Zooming in with very big count and snapping in
+        When I run :zoom-in with count 99999999999
+        And I run :zoom-out
+        Then the message "Zoom level: 110%" should be shown
+        And the zoom should be 110%
 
     Scenario: Zooming out with count
         When I run :zoom-out with count 2
